--- a/modules/ROOT/pages/employment.adoc
+++ b/modules/ROOT/pages/employment.adoc
@@ -1,5 +1,14 @@
 = Work Experience
 
+== 2023-2024 Technical Writer - GraphAware
+
+image:map.png[,20,20] _Remote_
+
+- Authored, reviewed, and edited documents for Operations Manual and Orchestra User Guide.
+- Gained knowledge writing for data science teams as primary technical writer on the Orchestra team.
+- Built on Asciidoc knowledge by developing documents in an Antora website environment.
+
+
 == 2021-2023 Technical Writer - Tern Systems
 
 image:map.png[,20,20] _Kopavogur, Iceland_
